add favicon, fonts

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,7 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container">
+    <div class="header__top">
+      Hello
+    </div>
+  </div>
 </header>
