--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,5 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("OpenSans-Regular", "../fonts/OpenSans-Regular", 400, normal);
+@include font-face("OpenSans-SemiBold", "../fonts/OpenSans-SemiBold", 600, normal);
+@include font-face("OpenSans-Bold", "../fonts/OpenSans-Bold", 700, normal);
+@include font-face("OpenSans-ExtraBold", "../fonts/OpenSans-ExtraBold", 800, normal);
+@include font-face("BebasNeue-Regular", "../fonts/BebasNeue-Regular", 400, normal);
