--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,46 @@
 <header class="header">
-  <div class="container">
-    <div class="header__top">
-      Hello
+  <div class="header__top">
+    <h1 class="visually-hidden">Фирма Konstuct</h1>
+    <div class="container header__top-container flex">
+      <a href="#" class="header__top-link">
+        <img class="image" loading="lazy" src="img/header/header-top-logo.svg" width="102" height="23"
+        alt="Логотип фирмы Konstuct">
+      </a>
+      <div class="header__top-content content-top">
+        <h2 class="content-top__title">PARTNER WITH KONSTUCT</h2>
+        <p class="content-top__descr">An award-winning construction management firm</p>
+      </div>
+      <span class="header__top-span">Scroll down</span>
+    </div>
+  </div>
+  <div class="header-bottom">
+    <div class="container header-bottom__container flex">
+      <a href="#" class="header-bottom__link">
+        <img class="image" loading="lazy" src="img/header/header-logo.svg" width="80" height="18"
+        alt="Логотип фирмы Konstuct">
+      </a>
+      <nav class="nav" title="Главная навигация" data-menu>
+        <ul class="list-reset nav__list flex">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Services</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Work</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
+        <span class="burger__line"></span>
+      </button>
     </div>
   </div>
 </header>
