--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -12,4 +12,6 @@
   --light-color: #fff;
   --btn-color: #00a4e5;
   --text-color: #48555B;
+  --active-color: #0481b3;
+  --focus-color: #366274;
 }
