--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,2 +1,101 @@
+.header {
+  position: relative;
+  background-color: var(--light-color);
 
 
+  &__top {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/header/bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @include mobile {
+      display: none;
+    }
+  }
+
+  &__top-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0 70px 0;
+    height: 100%;
+  }
+
+  &__top-link {
+    display: inline-block;
+
+    &:focus {
+			outline: none;
+		}
+  }
+
+  &__top-content {}
+
+  &__top-span {
+    display: inline-block;
+    margin: 0;
+    font-weight: 600;
+    font-size: 11px;
+    letter-spacing: 0.34em;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--light-color);
+  }
+}
+
+.header-bottom {
+  position: relative;
+  border: 1px solid #e6e6e6;
+
+  &__container {
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    @include mobile {
+    }
+  }
+
+  &__link {
+    position: relative;
+    z-index: 100;
+
+    &:focus {
+			outline: none;
+		}
+  }
+}
+
+.content-top {
+
+  &__title {
+    margin: 0;
+    margin-bottom: 20px;
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 60px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: var(--light-color);
+
+    @include small-tablet {
+      font-size: 50px;
+    }
+
+    @include mobile {
+      font-size: 40px;
+    }
+  }
+
+  &__descr {
+    margin: 0;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    color: var(--light-color);
+  }
+}
