--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -132,18 +132,21 @@ a {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-/*
+
 .section-title {
   margin: 0;
-  font-family: var(--second-family);
+  font-family: var(--font-family);
   font-weight: 700;
-  font-size: 24px;
-  color: #202020;
+  font-size: 18px;
+  letter-spacing: 0.13em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--text-color);
 
   @include mobile {
-    font-size: 18px;
+    font-size: 16px;
   }
-}*/
+}
 
 .burger {
   @include burger;
