--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -18,6 +18,12 @@
   }
 }
 
+@mixin height-tablet {
+  @media (max-width: (992px)) {
+    @content;
+  }
+}
+
 @mixin small-tablet {
   @media (max-width: (768px)) {
     @content;
