add footer and modals

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,90 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="footer__top top-footer">
+    <div class="container top-footer__container grid">
+      <div class="top-footer__company">
+        <h2 class="top-footer__company-title">Company</h2>
+        <a href="#" class="top-footer__company-logo">
+          <img class="image" loading="lazy" src="img/footer/footer-logo.svg" width="102" height="23"
+            alt="Логотип фирмы Konstuct">
+        </a>
+        <p class="top-footer__company-descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+          nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+      </div>
+      <div class="top-footer__link">
+        <h2 class="top-footer__link-title">Link</h2>
+        <nav class="top-footer__link-nav">
+          <ul class="list-reset top-footer__link-nav-list">
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Home</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">About</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Services</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Projects</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Contact us</a>
+            </li>
+          </ul>
+          <ul class="list-reset top-footer__link-nav-list">
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Faq</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Terms</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Careers</a>
+            </li>
+          </ul>
+          <ul class="list-reset top-footer__link-nav-list">
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Blog</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">Parners</a>
+            </li>
+            <li class="top-footer__link-nav-item">
+              <a href="#" class="top-footer__link-nav-link">News</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="top-footer__contact">
+        <h2 class="top-footer__contact-title">Contact us</h2>
+        <address class="top-footer__contact-address">213 Baker Street Oriel City Kounty 7000 KNW, Kountry Name</address>
+        <a href="tel:+239942334022" class="top-footer__contact-tel">+23 994 233 4022</a>
+        <a href="mailto:info@konstruct.com" class="top-footer__contact-email">info@konstruct.com</a>
+      </div>
+      <ul class="list-reset top-footer__social-list">
+        <li class="top-footer__social-item">
+          <a href="#" class="top-footer__social-link">
+            <img class="image" loading="lazy" src="img/footer/fb.svg" width="13" height="13"
+              alt="Переход на сайт Фэйсбук">
+          </a>
+        </li>
+        <li class="top-footer__social-item">
+          <a href="#" class="top-footer__social-link">
+            <img class="image" loading="lazy" src="img/footer/tw.svg" width="13" height="13"
+              alt="Переход на сайт Твиттер">
+          </a>
+        </li>
+        <li class="top-footer__social-item">
+          <a href="#" class="top-footer__social-link">
+            <img class="image" loading="lazy" src="img/footer/google.svg" width="13" height="13"
+              alt="Переход на сайт Гугл">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer__bottom bottom-footer">
+    <div class="container bottom-footer__container flex">
+      © 2017 Konstruct Inc. Designed by Jane Kathryn Teo
+    </div>
+  </div>
 </footer>
