--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,9 +7,10 @@
 // подключения компонентов страницы
 @import "./components/btn";
 @import "./components/nav";
+@import "./components/popup";
 @import "./components/header";
 @import "./components/story";
 @import "./components/capabilities";
 @import "./components/touch";
 @import "./components/news";
-
+@import "./components/footer";
